==> 8bitgeek/caribou-rtos/caribou/target/chip/stm32/stm32l431/src/uart.c <==
#include <caribou/kernel/interrupt.h>
#include <caribou/lib/stdio.h>
#include <caribou/lib/errno.h>
#include <caribou/lib/heap.h>
#include <caribou/lib/string.h>
#include <chip/chip.h>
#include <chip/uart.h>
#include <board.h>
#include <stm32l4xx.h>
#include <stm32l4xx_hal_gpio.h>
#include <stm32l4xx_hal_usart.h>
#include <stm32l4xx_hal_rcc_ex.h>
#include <stm32l4xx_hal_rcc.h>
#include <stm32l4xx_hal_dma.h>
	#define HSI_VALUE 16000000U
	#define LSE_VALUE 32768U
#define USART_BRR_MIN    0x10U        /* USART BRR minimum authorized value */
#define USART_BRR_MAX    0xFFFFU      /* USART BRR maximum authorized value */
#define USART_CR1_FIELDS          ((uint32_t)(USART_CR1_M | USART_CR1_PCE | USART_CR1_PS | \
                                              USART_CR1_TE | USART_CR1_RE  | USART_CR1_OVER8))    /*!< USART CR1 fields of parameters set by USART_SetConfig API */
#define USART_CR2_FIELDS          ((uint32_t)(USART_CR2_CPHA | USART_CR2_CPOL | \
                                              USART_CR2_CLKEN | USART_CR2_LBCL | USART_CR2_STOP)) /*!< USART CR2 fields of parameters set by USART_SetConfig API */

int chip_uart_int_enable(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	int rc = chip_uart_int_enabled(private_device);
	private_device->base_address->CR1 |= chip_uart_interrupt_mask(private_device);
	return rc;
}

int chip_uart_int_disable(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	int rc = chip_uart_int_enabled(private_device);
   	private_device->base_address->CR1 &= ~chip_uart_interrupt_mask(private_device);
	return rc;
}

int chip_uart_int_enabled(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	int rc = (private_device->base_address->CR1 & chip_uart_interrupt_mask(private_device)) ? 1 : 0;
	return rc;
}

int chip_uart_set_config(void* device,caribou_uart_config_t* config)
{
	int rc=(-1);
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	if ( !config )
	{
		config = &private_device->config;
	}
	private_device->base_address->CR1 &= ~USART_CR1_UE;	/* disable the UART */
	if ( config )
	{
		USART_InitTypeDef USART_InitStructure;
		memset(&USART_InitStructure,0,sizeof(USART_InitTypeDef));
		USART_InitStructure.BaudRate = (int)config->baud_rate;
		USART_InitStructure.WordLength = (int)config->word_size;

		switch ( config->word_size )
		{
			default:
			case CARIBOU_UART_WORDSIZE_5:				/* Word size 5 bits */
			case CARIBOU_UART_WORDSIZE_6:				/* Word size 6 bits */
			case CARIBOU_UART_WORDSIZE_7:				/* Word size 7 bits */
			case CARIBOU_UART_WORDSIZE_8:				/* Word size 8 bits */
				USART_InitStructure.WordLength = USART_WORDLENGTH_8B;
				break;
			case CARIBOU_UART_WORDSIZE_9:				/* Word size 9 bits */		
				USART_InitStructure.WordLength = USART_WORDLENGTH_9B;
				break;
		}

		switch ( config->stop_bits )
		{
			case CARIBOU_UART_STOPBITS_05:
				//USART_InitStructure.USART_StopBits = USART_StopBits_0_5;
				//break;
			default:
			case CARIBOU_UART_STOPBITS_1:
				USART_InitStructure.StopBits = USART_STOPBITS_1;
				break;
			case CARIBOU_UART_STOPBITS_15:
				USART_InitStructure.StopBits = USART_STOPBITS_1_5;
				break;
			case CARIBOU_UART_STOPBITS_2:
				USART_InitStructure.StopBits = USART_STOPBITS_2;
				break;
		}

		switch( config->parity_bits )
		{
			default:
			case CARIBOU_UART_PARITY_NONE:
				USART_InitStructure.Parity = USART_PARITY_NONE;
				break;
			case CARIBOU_UART_PARITY_ODD:
				USART_InitStructure.Parity = USART_PARITY_ODD;
				break;
			case CARIBOU_UART_PARITY_EVEN:
				USART_InitStructure.Parity = USART_PARITY_EVEN;
				break;
		}

		switch( config->flow_control )
		{
			default:
			case CARIBOU_UART_FLOW_NONE:		/* no flow control */
			case CARIBOU_UART_FLOW_RTS:			/* RTS flow control */
			case CARIBOU_UART_FLOW_CTS:			/* CTS flow control */
			case CARIBOU_UART_FLOW_RTS_CTS:		/* RTS+CTS flow control */
				break;
		}

		USART_InitStructure.Mode = USART_MODE_TX_RX;
		chip_usart_set_config(private_device->base_address, &USART_InitStructure);
		private_device->base_address->CR1 |= USART_CR1_UE;	/* enable the UART */
		
		if ( config->dma_mode != CARIBOU_UART_DMA_NONE )
		{
			/* dma channel(s) priority */
			switch( config->dma_prio )
			{
				case CARIBOU_UART_DMA_PRIO_DEFAULT:	
					break;
				case CARIBOU_UART_DMA_PRIO_LOW:		
					private_device->rx.dma_prio = 0;			
					break;
				case CARIBOU_UART_DMA_PRIO_MEDIUM:	
					private_device->rx.dma_prio = DMA_CCR_PL_0;		
					break;
				case CARIBOU_UART_DMA_PRIO_HIGH:	
					private_device->rx.dma_prio = DMA_CCR_PL_1;		
					break;
				case CARIBOU_UART_DMA_PRIO_HIGHEST:	
					private_device->rx.dma_prio = DMA_CCR_PL_1|DMA_CCR_PL_0;	
					break;
			}
			caribou_vector_disable(private_device->vector);
           	private_device->base_address->CR1 &= ~chip_uart_interrupt_mask(private_device);
			if ( config->dma_mode & CARIBOU_UART_DMA_RX )
			{
				chip_uart_enable_dma_rx(private_device);
			}
			if ( config->dma_mode & CARIBOU_UART_DMA_TX )
			{
				chip_uart_enable_dma_tx(private_device);
			}
		}

		/* Install and Enable the UART Interrupt Vector */
		caribou_vector_install(private_device->vector,isr_uart,private_device);
		caribou_vector_enable(private_device->vector);
		/* Enable the UART peripheral Interrupt Enable Flags */
		private_device->base_address->CR1 |= chip_uart_interrupt_mask(private_device);
		rc=0;
	}
	return rc;
}

bool chip_uart_tx_busy(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
    bool rc = (private_device->base_address->ISR & USART_FLAG_TC) ? false : true;
	return rc;
}

bool chip_uart_tx_ready(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
    bool rc = (private_device->base_address->ISR & USART_FLAG_TXE) ? true : false;
	return rc;
}

bool chip_uart_rx_ready(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	uint32_t sr = private_device->base_address->ISR;
    bool rc = (sr & (USART_FLAG_RXNE|USART_FLAG_ORE)) ? true : false;
	return rc;
}

void chip_uart_tx_start(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	if ( private_device->tx.dma_enabled )
	{
		/* Get a pointer to the DMA channel from the private device */
		DMA_Channel_TypeDef* channel = private_device->tx.dma_channel;

		/* Is the channel already running? */
		if ( channel->CCR & DMA_CCR_EN )
		{
			/* If we're already doing a DMA transfer, then nothing to do, else start it... */
			if ( channel->CCR & DMA_CCR_EN )
			{
				uint32_t dmaBytes=0;		/* Number of bytes to transfer */
				uint32_t qHead = (uint32_t)caribou_bytequeue_head(private_device->tx.queue);
				uint32_t qTail = (uint32_t)caribou_bytequeue_tail(private_device->tx.queue);

				if ( qHead > qTail )
				{
					/* We will not wrap around the bytequeue buffer on this pass. */
					dmaBytes = qHead - qTail;
				}
				else
				if ( qHead < qTail )
				{
					/* We will wrap around, so we have to do this in two stages. First, DMA up until the wrap,
					   generate an interrupt at that point, then start the remainder. */
					dmaBytes = caribou_bytequeue_size(private_device->tx.queue) - qTail;
				}

				/* Do we have anything to do? */
				if ( dmaBytes > 0 )
				{
					/* Populate the channel source memory pointer and the number of transfers */
					channel->CMAR = (uint32_t)&private_device->tx.queue->queue[qTail];	/* the source memory address */
					channel->CNDTR = dmaBytes;

					/* Enable channel interrupt after completion */
					channel->CCR |= private_device->tx.dma_tcif;
	
					/* Enable The DMA Tx Stream */
					channel->CCR |= DMA_CCR_EN;
				}
			}
		}
	}
	else
	{
		private_device->base_address->CR1 |= USART_CR1_TXEIE;
	}
}

void chip_uart_tx_stop(void* device)
{
	chip_uart_private_t* private_device = (chip_uart_private_t*)device;
	private_device->base_address->CR1 &= ~USART_CR1_TXEIE;
}

static void isr_uart(InterruptVector vector,void* arg)
{
	/* private device passed as isr argument */
	chip_uart_private_t* device = (chip_uart_private_t*)arg;
	 
	if ( device->vector == vector )
	{
		// Empty out the UART receiver..
		while ( !device->rx.dma_enabled && chip_uart_rx_ready(device) )
		{
			if ( !caribou_bytequeue_put(device->rx.queue,chip_uart_rx_data(device) ) )
			{
				device->status |= STDIO_STATE_RX_OVERFLOW;
			}
			device->status |= STDIO_STATE_RX_PENDING;
            device->base_address->ICR = USART_ICR_ORECF; // clear the overrun flag 
		}
		// While transmitter empty and tx queue has data, then transmit...
		if ( !caribou_bytequeue_empty(device->tx.queue) )
		{
			// Transmitter shift register is ready?
			if ( chip_uart_tx_ready(device) )
			{
				chip_uart_tx_data(device,caribou_bytequeue_get(device->tx.queue));
			}
		}
		// Disable transmitter empty interrupts so we don't re-enter the interrupt handler.
		if ( caribou_bytequeue_empty(device->tx.queue) )
		{
			chip_uart_tx_stop(device);
		}
		device->base_address->ICR = USART_ICR_ORECF; // clear the overrun flag 
	}
}
